--- a/SimplePersonalPage/styles.css
+++ b/SimplePersonalPage/styles.css
@@ -1,38 +1,32 @@
 *{
     margin:0;
-    box-sizing: border-box;
+    padding:0;
 }
 
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
+    top:6%;
 }
 
 nav ul{
-    display: flex;
-    flex-wrap: wrap;
     list-style: none;
-    margin-left:70%;
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
 }
 
 nav ul a{
     text-decoration: none;
-    padding: 20px;
-    display: inline-block;
-    font-size: 16px;
     color:black;
-    letter-spacing: 1px;
+    padding:20px;
+    display:inline-block;
 }
 
-.greet{
-    font-size: 18px;
-    font-family:cursive;
-}
-
-.intro{
-    font-size: 30px;
-    font-weight: bold;
-    letter-spacing: 2px;
+img{
+    height:100px;
+    width:100px;
+    margin-left: 50px;
 }
